# tools-server

./: .gitignore  Dockerfile  README.md  export.py  install.bat  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  start.sh
app/: __init__.py
app/api/: __init__.py  documents.py  filesystem.py  git.py  memory.py  scraper.py
app/core/: __init__.py  documents_service.py  filesystem_service.py  git_service.py  memory_service.py  scraper_service.py  serper_service.py  test_user_prefs.py
app/models/: __init__.py  documents.py  filesystem.py  git.py  memory.py  scraper.py  serper.py
app/serper/: .env.example  requirements.txt  server.py
app/serper/crawler/: browser.py
app/serper/embeddings/: model.py
app/serper/search/: google.py
app/serper/utils/: config.py  markdown.py
app/utils/: config.py
stubs/bs4/: __init__.pyi
tests/: test_memory_service.py
tests/api/: test_filesystem_api.py  test_git_api.py
tests/core/: test_documents_service.py  test_filesystem_service.py  test_git_service.py  test_memory_service.py  test_scraper_service.py
